# AgentG-Binokol_V3

./: .dockerignore  .env.example  .geminiignore  .gitignore  .railway-cache-bust  Dockerfile  MANIFEST.in  QWEN.md  README.md  __init__.py  config.py  dashboard.js  dockerfile  license  main.py  netlify.toml  nixpacks.toml  ollama_client.py  procfile  pyproject.toml  railway.json  requirements.txt  self_improve.py  task_queue.py
agents/: __init__.py  architect.py  base.py  coder.py  debator.py  tester.py
dashboard/: __init__.py  server.py
docs/: AGENTS_swarm.md  ARCHITECTURAL_FRAMEWORKS.md  CODEBASE_ANALYSIS.md  OPEN_CLAW_NERVE_CONFIG.md  PINOKIO_PREFLIGHT_CHECKLIST.md
netlify/functions/: main.py
src/AGENT_Joko/: inference_queue.py  main.py  model_router.py  orchestrator.py
src/AGENT_Joko/agents/: fixer.py
src/AGENT_Joko/dashboard/: __init__.py  api.py  server.py
src/AGENT_Joko/dashboard/static/: app.css  app.js
src/AGENT_Joko/dashboard/templates/: index.html
src/AGENT_Joko/prompts/: MASTER_PROMPT.md
src/AGENT_Joko/tools/: file_ops.py  git_ops.py
tests/: blueprint_helpers.py  conftest.py  test_ai_testing_blueprint.py  test_dashboard_chat_model.py  test_dashboard_failures.py  test_dashboard_output.py  test_dashboard_probe.py  test_dashboard_queue.py  test_inference_queue.py  test_memory_context.py  test_ollama_client.py  test_orchestrator.py
tools/: __init__.py  shell.py
