[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-joko"
version = "1.0.0"
description = "Hybrid local AI developer — multi-agent coding swarm with FastAPI dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "markdown-it-py>=4.0.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-joko = "agent_joko.main:main"
agent-joko-dashboard = "agent_joko.dashboard.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
[tool.setuptools.package-data]
agent_joko = [
    "dashboard/static/*",
    "dashboard/static/**/*",
    "dashboard/templates/*",
    "prompts/*.md",
    "memory/*.json"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_joko*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
